ex4+5, Documentation